<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView 
        android:src="@drawable/android_abstract"
        android:id="@+id/IVdisplay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/display" />
    
    <Button 
        android:id="@+id/BsetWallpaper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/setWall"/>
    
<HorizontalScrollView 
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">"
        
    <ImageView 
        android:src="@drawable/android_abstract"
        android:id="@+id/IVimage1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:contentDescription="@string/wall"
        android:padding="15dp" />
    <ImageView 
        android:src="@drawable/teenage_mutant_ninja_androids"
        android:id="@+id/IVimage2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:contentDescription="@string/wall"
        android:padding="15dp" />
    
    </LinearLayout>
    
</HorizontalScrollView>

</LinearLayout>