<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView 
        android:id="@+id/toppie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help" />"
    
    <ScrollView 
       android:layout_width="fill_parent"
       android:layout_height="200dp" >
    <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
    
    <Button
        android:id="@+id/Button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    <Button
        android:id="@+id/Button12"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textSize="25dp" />
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>